\name{NEWS}
\title{News for Package \pkg{GECO}}

\section{Changes in version 0.1.3}{
\itemize{
    \item Initial setup for future BioConductor submission.
}}