@@ -1,5 +1,4 @@
 .Rproj.user
-inst/doc
 .Rbuildignore
 GECO.Rproj
 GECO.Rcheck
