@@ -1,6 +1,11 @@
 \name{NEWS}
 \title{News for Package \pkg{GECO}}
 
+\section{Changes in version 0.1.4}{
+\itemize{
+    \item Adding toy data to allow users to test the package.
+}}
+
 \section{Changes in version 0.1.3}{
 \itemize{
     \item Initial setup for future BioConductor submission.
